# brydz_bot_random

./: Cargo.toml
src/: lib.rs
src/declarer/: agent.rs  channel.rs
src/defender/: agent.rs  channel.rs  mod.rs
src/dummy/: channel.rs
